--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,11 @@
  background-color: red;
  border: 2px solid greenyellow;
 }
+
+.cards{
+  border: 2px solid rgb(52, 59, 42);
+  margin : 10px ;
+  padding: 10px ;
+  border-radius: 10px;
+  background-color: #dfd8d8;
+}
